# pixeltable-app-template

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md
backend/: config.py  functions.py  main.py  models.py  pyproject.toml  requirements.txt  setup_pixeltable.py
backend/routers/: agent.py  data.py  search.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/agent/: agent-page.tsx
frontend/src/components/data/: data-page.tsx
frontend/src/components/search/: search-page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  tabs.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
